# zeabur-ops

./: Cargo.toml  README.md
src/: lib.rs  log_collector.rs  main.rs  zeabur.rs
src/log/: log_collector.rs  log_entry.rs  log_sink.rs  mod.rs  zeabur_log_collector.rs
src/log/sink/: mod.rs  otlp_log_sink.rs
src/zeabur/: client.rs  get_environments_of_project.rs  get_services_of_project.rs  list_projects.rs  mod.rs  query_service_runtime_logs.rs
tests/: zeabur_integration_tests.rs
