[package]
name = "zeabur-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
opentelemetry = { version = "0.25.0"}
opentelemetry-otlp = { version = "0.25.0", features = ["http-proto", "reqwest-client", "logs"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
serde_json = "1.0.128"
log = "*"
env_logger = "0.11.5"
